[gd_scene load_steps=36 format=3 uid="uid://qegapifvcjxf"]

[ext_resource type="FontFile" uid="uid://cyl73mjyqjjgn" path="res://Assets/Text Font/Perdition-jEwpv.ttf" id="1_s8dey"]
[ext_resource type="FontFile" uid="uid://1ua6mst1mq26" path="res://Assets/Text Font/PerditionBold-z8ZY1.ttf" id="2_ego4s"]
[ext_resource type="FontFile" uid="uid://cdtab0nrd6plv" path="res://Assets/Text Font/PerditionCondensed-51Agz.ttf" id="3_fenki"]
[ext_resource type="FontFile" uid="uid://motf7nbd2v80" path="res://Assets/Text Font/PerditionItalic-GOmGa.ttf" id="4_ky8bo"]
[ext_resource type="FontFile" uid="uid://cxdiopbreyt56" path="res://Assets/Text Font/PerditionExpanded-6Yqo6.ttf" id="5_doqa4"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="6_yjkgk"]
[ext_resource type="PackedScene" uid="uid://coyy1mo6xr5dd" path="res://Scene/install_sounds.tscn" id="7_0hh57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6237"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndtne"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vcwk4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ex2vq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w7i1y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xli8a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtnfy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irm7e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1kme"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q8w1c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wl85r"]

[sub_resource type="Theme" id="Theme_phe12"]
Button/colors/font_hover_color = Color(1, 0.384314, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.376471, 0.12549, 0, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 80
Button/fonts/font = ExtResource("1_s8dey")
Button/styles/disabled = SubResource("StyleBoxEmpty_b6237")
Button/styles/disabled_mirrored = SubResource("StyleBoxEmpty_ndtne")
Button/styles/focus = SubResource("StyleBoxEmpty_vcwk4")
Button/styles/hover = SubResource("StyleBoxEmpty_ex2vq")
Button/styles/hover_mirrored = SubResource("StyleBoxEmpty_w7i1y")
Button/styles/hover_pressed = SubResource("StyleBoxEmpty_xli8a")
Button/styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rtnfy")
Button/styles/normal = SubResource("StyleBoxEmpty_irm7e")
Button/styles/normal_mirrored = SubResource("StyleBoxEmpty_f1kme")
Button/styles/pressed = SubResource("StyleBoxEmpty_q8w1c")
Button/styles/pressed_mirrored = SubResource("StyleBoxEmpty_wl85r")
Label/font_sizes/font_size = 80
Label/fonts/font = ExtResource("2_ego4s")
RichTextLabel/fonts/bold_font = ExtResource("2_ego4s")
RichTextLabel/fonts/bold_italics_font = ExtResource("3_fenki")
RichTextLabel/fonts/italics_font = ExtResource("4_ky8bo")
RichTextLabel/fonts/mono_font = ExtResource("5_doqa4")
RichTextLabel/fonts/normal_font = ExtResource("1_s8dey")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_belc8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_art53"]
bg_color = Color(0.369419, 0.121733, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_g47cj"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_art53")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vfu4x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vggbr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrul5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ejuw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efdn0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fnidq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ej1gw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nowol"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7b2kq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kkeft"]

[sub_resource type="Animation" id="Animation_nkoc4"]
resource_name = "PauseScreen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_Main_Menu/Inventory_Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.368627, 0.121569, 0, 0.286275), Color(0.368627, 0.121569, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u42d4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pause_Main_Menu/Inventory_Background:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.368627, 0.121569, 0, 0.286275)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6r00"]
_data = {
"PauseScreen": SubResource("Animation_nkoc4"),
"RESET": SubResource("Animation_u42d4")
}

[node name="PauseUI" type="Control"]
process_mode = 2
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_phe12")
script = ExtResource("6_yjkgk")

[node name="Pause_Main_Menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.0
offset_right = -309.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 80

[node name="Inventory_Background" type="ColorRect" parent="Pause_Main_Menu"]
show_behind_parent = true
z_index = 1
layout_mode = 2
color = Color(0.368627, 0.121569, 0, 0.286275)

[node name="Main_Menu" type="MarginContainer" parent="Pause_Main_Menu"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 25

[node name="General" type="VBoxContainer" parent="Pause_Main_Menu/Main_Menu"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="Pause_Main_Menu/Main_Menu/General"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Pause"

[node name="Main_Menu" type="MarginContainer" parent="Pause_Main_Menu/Main_Menu/General"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ColorRect" type="ColorRect" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu"]
layout_mode = 2
mouse_filter = 2
color = Color(0.0807833, 0.0807833, 0.0807833, 1)

[node name="Main_Menu2" type="MarginContainer" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="General" type="VBoxContainer" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Continue" type="Button" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Options" type="Button" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General"]
layout_mode = 2
text = "Options"

[node name="Return Menu" type="Button" parent="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General"]
layout_mode = 2
text = "Return to Menu"

[node name="InstallSounds" parent="Pause_Main_Menu" instance=ExtResource("7_0hh57")]
root_path = NodePath("../..")

[node name="Sound_Settings" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 176.0
offset_top = 80.0
offset_right = 1104.0
offset_bottom = 646.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="Inventory_Background" type="ColorRect" parent="Sound_Settings"]
show_behind_parent = true
z_index = 1
layout_mode = 2
mouse_filter = 2
color = Color(0.368627, 0.121569, 0, 0.286275)

[node name="MarginContainer" type="MarginContainer" parent="Sound_Settings"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="Sound_Settings/MarginContainer"]
layout_mode = 2
color = Color(0.0807833, 0.0807833, 0.0807833, 1)

[node name="MarginContainer" type="MarginContainer" parent="Sound_Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Sound_Settings/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="SettingLabel" type="Label" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_s8dey")
theme_override_font_sizes/font_size = 115
theme_override_styles/normal = SubResource("StyleBoxEmpty_belc8")
text = "Settings"

[node name="Filler" type="MarginContainer" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="GridContainer" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_g47cj")
theme_override_constants/h_separation = 130
theme_override_constants/v_separation = 15
columns = 2

[node name="MusicLabel" type="Label" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_s8dey")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_belc8")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_s8dey")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_belc8")
text = "Sound Effect"

[node name="SFXSlider" type="HSlider" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="Button" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.37513, 0.124111, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.384314, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_s8dey")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_vfu4x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vggbr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hrul5")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_2ejuw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_efdn0")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fnidq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ej1gw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nowol")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7b2kq")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kkeft")
theme_override_styles/normal = SubResource("StyleBoxEmpty_belc8")
text = "Back"

[node name="HBoxContainer2" type="HBoxContainer" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Filler2" type="MarginContainer" parent="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a6r00")
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Pause_Main_Menu/Main_Menu/General/Main_Menu/Main_Menu2/General/Return Menu" to="." method="_on_return_menu_pressed"]
[connection signal="pressed" from="Sound_Settings/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
